# openapi-zod-client-playground

./: README.md  openapi.yaml
axum-todo-api/: Cargo.toml
axum-todo-api/src/: main.rs
sveltekit-todo/: package-lock.json  package.json
sveltekit-todo/src/lib/todo_api/: todoApiClient.ts
sveltekit-todo/src/routes/: +page.server.ts  +page.svelte
